# Intermedia-2-Pablo-Garcia-Ollero

./: CMakeList.txt  CMakeLists.txt  Hospital-Intermedia.cpp  Main.cpp  Pruebas copy.cpp  Pruebas.cpp  Pruebas2.0.cpp  README.md  cita_medica.cpp  medicos.cpp  pacientes.cpp  servicios.cpp  servicios.h
include/: CitaMedica.hpp  Funciones.hpp  Medico.hpp  Paciente.hpp  Servicio.hpp
output/: Hospital-Intermedia.cpp  citas.txt  medicos.txt  pacientes.txt  servicios.txt
output/output/: pacientes.txt
src/: CitaMedica.cpp  Funciones.cpp  Medico.cpp  Paciente.cpp  Servicio.cpp  main.cpp
